--- a/scss/view css/view.scss
+++ b/scss/view css/view.scss
@@ -1,6 +1,7 @@
 //RESET
 @import "reset2";
-
+//IMPORT View2
+@import "view2";
 //FONT
 @import url("https://fonts.googleapis.com/css2?family=Gajraj+One&family=Tilt+Prism&family=Tourney:wght@200&display=swap");
 // font-family: 'Gajraj One', cursive;
@@ -35,20 +36,20 @@ header {
   justify-content: space-between;
   padding: 0 7.5vw;
   align-items: center;
-  font: bold 3em/1 "Tilt Prism";
   ul {
     display: flex;
     li {
-      margin: 0 1vw;
-      font: bold 2rem/1 "Tilt Prism";
+      margin: 1vw;
+      font-size: 2rem;
     }
   }
   a {
     transition: color 0.2s, background-color 0.2s ease-in;
     opacity: 0;
     position: relative;
+    line-height: 2rem;
     letter-spacing: 1px;
-
+    font: bold 2rem/1 "Tilt Prism";
     &::before {
       content: "";
       display: block;
@@ -70,6 +71,10 @@ header {
     &:hover {
       background: linear-gradient(to top, #fbf13a 10%, transparent 50%);
     }
+  }
+
+  #headerLogo {
+    font-size: 3rem;
   }
 }
 
@@ -245,10 +250,8 @@ section {
             width: max-content;
             height: 2rem;
             font-size: 13px;
-            // letter-spacing: 0.5px;
             text-align: center;
             left: 3rem;
-            // top: 7rem;
             background-color: white;
             border-radius: 10px;
             &::before {
@@ -407,35 +410,126 @@ section {
       }
     }
   }
-
-  #slide3 {
+  #slider3 {
     display: flex;
     flex-direction: row;
-  }
+    justify-content: space-around;
+    align-items: center;
+    background: radial-gradient(
+      at 20% 125%,
+      #feda78 20%,
+      #e23467 60%,
+      #ac2bb3 90%
+    );
+    .loader {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      border: 3px solid rgb(255, 255, 255, 0.2);
+      border-top-color: transparent;
+      animation: rot1 1.2s linear infinite;
+    }
 
-  section.emptyground {
-    width: 100%;
-    height: 75vh;
-  }
-}
+    @keyframes rot1 {
+      to {
+        transform: rotate(360deg);
+      }
+    }
+    div {
+      padding: 0.5rem;
+      border-radius: 15px;
+    }
+    .imgDescript {
+      position: relative;
+      z-index: -1;
+      width: 20%;
+      height: 80%;
+      background-color: white;
+      background-size: contain;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-image: url(/video/spot-image/석촌호수\ 야경.jpeg);
+      // border: 1px solid white;
+      box-shadow: 0 5px 10px 0 black;
+      overflow: hidden;
+      .imgPlace {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: black;
+        padding: 0;
+        transition: 1s;
 
-#slider3 {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  .loader {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    border: 3px solid rgb(255, 255, 255, 0.2);
-    border-top-color: transparent;
-    animation: rot1 1.2s linear infinite;
-  }
+        .profileHead {
+          width: 100%;
+          color: white;
+          font: bold 1rem/1 "sans-serif";
+          .profileCircleLine {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            top: 25%;
+            left: 9%;
+            border-radius: 50%;
+            width: 3rem;
+            height: 3rem;
+            background: radial-gradient(
+              at 20% 125%,
+              #feda78 20%,
+              #e23467 60%,
+              #ac2bb3 100%
+            );
+            .profileCircle {
+              width: 88%;
+              height: 88%;
+              border-radius: 50%;
+              background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSS0Vio3vh0dYNlKnwk6KKVfGs9tSFKKbYY5w&usqp=CAU");
+              background-size: contain;
+              background-position: center;
+            }
+          }
+          .profileFollow {
+            position: absolute;
+            font: normal 0.8em sans-serif;
+            letter-spacing: 1px;
+            top: 24%;
+            left: 42%;
+            color: #fff;
+            .followBtn {
+              color: white;
+              width: max-content;
+              border-radius: 5px;
+              padding: 0 3rem;
+              background-color: #0ba6ff;
+            }
+          }
 
-  @keyframes rot1 {
-    to {
-      transform: rotate(360deg);
+          iframe {
+            width: 100%;
+            height: 55%;
+            margin-top: 55%;
+          }
+        }
+      }
+      .emogeContainer {
+        position: absolute;
+        top: 75%;
+        display: flex;
+        color: black;
+        font-size: 1.5rem;
+        letter-spacing: 0.8rem;
+      }
+
+      &:hover {
+        .imgPlace {
+          cursor: pointer;
+          transform: translateY(100%);
+          opacity: 0;
+        }
+      }
     }
   }
 }
