--- a/scss/drive css/drive.scss
+++ b/scss/drive css/drive.scss
@@ -1,10 +1,13 @@
 //RESET CSS
 @import "reset";
+
 //FONT
 @import url("https://fonts.googleapis.com/css2?family=Gajraj+One&family=Tilt+Prism&family=Tourney:wght@200&display=swap");
 // font-family: 'Gajraj One', cursive;
 // font-family: 'Tilt Prism', cursive; //Header
 // font-family: 'Tourney', cursive;
+
+// Font-face //
 @font-face {
   font-family: "bitbit";
   src: url("//cdn.df.nexon.com/img/common/font/DNFBitBit-Regular.woff"),
@@ -15,8 +18,41 @@
   font-weight: normal;
   font-style: normal;
 }
+
+// 공통 사항 //
+#commonUpButton {
+  position: fixed;
+  right: 3vw;
+  bottom: 5vh;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  border: 1px solid white;
+  background-color: #0c0b0d;
+  color: white;
+  cursor: pointer;
+  z-index: 9999;
+
+  &:hover {
+    & {
+      transform: scale(1.05);
+    }
+    i {
+      transform: scale(1.05);
+    }
+  }
+}
+
 // COMMON  //
 body {
+  // Car side //
+  .gsap-marker-end,
+  .gsap-marker-start,
+  .gsap-marker-scroller-end,
+  .gsap-marker-scroller-start {
+    color: transparent !important;
+    border-color: transparent !important;
+  }
 }
 // Header //
 header {
@@ -161,7 +197,7 @@ figure {
 
     .btn {
       display: block;
-      background-color: #000;
+      background-color: #0c0b0d;
       width: 10%;
       height: 100%;
       cursor: pointer;
@@ -189,31 +225,20 @@ figure {
       }
     }
   }
-}
-#commonUpButton {
-  position: fixed;
-  right: 3vw;
-  bottom: 5vh;
-  width: 2.5rem;
-  height: 2.5rem;
-  border-radius: 50%;
-  border: 1px solid white;
-  background-color: #0c0b0d;
-  color: white;
-  cursor: pointer;
-
-  &:hover {
-    & {
-      transform: scale(1.05);
-    }
-    i {
-      transform: scale(1.05);
-    }
+  .go {
+    position: absolute;
+    right: 24vw;
+    bottom: 5vh;
+    font: 2.4rem arial;
+    color: #fbf13a;
   }
 }
+
 .detail {
   position: relative;
   height: 500px;
+  background-color: #0c0b0d;
+  z-index: -99;
 
   .detail_item {
     position: absolute;
@@ -226,40 +251,233 @@ figure {
 }
 
 // Drive Car //
-.experience {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  z-index: 2;
-}
-
-.scrollTarget {
+#linesvg {
   position: absolute;
-  height: 1000vh;
-  width: 100px;
-  top: 0;
-  z-index: 0;
-}
-
-.vignette-radial {
-  position: fixed;
-  z-index: 11;
-  top: 0;
-  left: 0;
-  height: 100vh;
+  top: 100%;
   width: 100%;
-  pointer-events: none;
+  height: 2700px;
+  background-color: #0c0b0d;
+  overflow: hidden;
+
+  g {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+    stroke: #fbf13a;
+  }
+}
+// .experience {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100vh;
+//   z-index: 2;
+// }
+
+// .scrollTarget {
+//   position: absolute;
+//   height: 1000vh;
+//   width: 100px;
+//   top: 0;
+//   z-index: 10;
+// }
+
+// .vignette-radial {
+//   position: fixed;
+//   z-index: 11;
+//   top: 0;
+//   left: 0;
+//   height: 100vh;
+//   width: 100%;
+//   pointer-events: none;
+// }
+
+// .vignette-radial:after {
+//   pointer-events: none;
+//   content: " ";
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   bottom: 0;
+//   right: 0;
+//   background: radial-gradient(circle, transparent 60%, black 150%);
+// }
+.st0 {
+  fill: none;
+  // stroke: #fbf13a;
+  // stroke-width: 1;
+  // stroke-linecap: round;
+  // stroke-linejoin: round;
+  // stroke-miterlimit: 10;
 }
 
-.vignette-radial:after {
-  pointer-events: none;
-  content: " ";
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background: radial-gradient(circle, transparent 60%, black 150%);
+// Map //
+.seoul {
+  position: relative;
+  width: 100%;
+  height: 980px;
+  z-index: 9999;
+  color: #fff;
+
+  img {
+    position: absolute;
+    width: 45vw;
+    top: 5%;
+    left: 50%;
+    transform: translateX(-400px);
+  }
+
+  // Container //
+  .container {
+    position: absolute;
+    border-radius: 50%;
+    height: 36px;
+    width: 36px;
+    animation: rotate_3922 1.2s linear infinite;
+    background-color: #9b59b6;
+    background: linear-gradient(#9b59b6, #84cdfa, #5ad1cd);
+
+    &:hover {
+      width: 450px;
+      height: 450px;
+      animation-play-state: paused;
+    }
+  }
+
+  .container span {
+    position: absolute;
+    border-radius: 50%;
+    height: 100%;
+    width: 100%;
+    background-color: #9b59b6;
+    background-image: linear-gradient(#9b59b6, #84cdfa, #5ad1cd);
+  }
+
+  .container span:nth-of-type(1) {
+    filter: blur(5px);
+  }
+
+  .container span:nth-of-type(2) {
+    filter: blur(10px);
+  }
+
+  .container span:nth-of-type(3) {
+    filter: blur(25px);
+  }
+
+  .container span:nth-of-type(4) {
+    filter: blur(50px);
+  }
+
+  @keyframes rotate_3922 {
+    from {
+      transform: translate(-50%, -50%) rotate(0deg);
+    }
+
+    to {
+      transform: translate(-50%, -50%) rotate(360deg);
+    }
+  }
+
+  .container1 {
+    top: 5%;
+    left: 30%;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      right: 10px;
+      bottom: 10px;
+      border: solid 5px #ffffff;
+      border-radius: 50%;
+      background-image: url(/video/map_01.png);
+    }
+  }
+  .container3 {
+    top: 15%;
+    left: 20%;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      right: 10px;
+      bottom: 10px;
+      background-image: url(/video/drive3.png);
+      border: solid 5px #ffffff;
+      border-radius: 50%;
+    }
+  }
+
+  .container5 {
+    top: 25%;
+    left: 30%;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      right: 10px;
+      bottom: 10px;
+      background-image: url(/video/drive3.png);
+      border: solid 5px #ffffff;
+      border-radius: 50%;
+    }
+  }
+
+  .container2 {
+    top: 5%;
+    left: 70%;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      right: 10px;
+      bottom: 10px;
+      background-image: url(/video/drive3.png);
+      border: solid 5px #ffffff;
+      border-radius: 50%;
+    }
+  }
+
+  .container4 {
+    top: 15%;
+    left: 80%;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      right: 10px;
+      bottom: 10px;
+      background-image: url(/video/drive3.png);
+      border: solid 5px #ffffff;
+      border-radius: 50%;
+    }
+  }
+  .container6 {
+    top: 25%;
+    left: 70%;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      right: 10px;
+      bottom: 10px;
+      background-image: url(/video/drive3.png);
+      border: solid 5px #ffffff;
+      border-radius: 50%;
+    }
+  }
 }
