--- a/scss/palace css/palace.scss
+++ b/scss/palace css/palace.scss
@@ -58,7 +58,7 @@ header {
   }
 }
 
-figure {
+ figure {
   position: relative;
   background-color:#0c0b0d;
   width: 100%;
@@ -102,6 +102,7 @@ figure {
 section {
   width: 100%;
   height: 1000px;
+  overflow: hidden;
 }
 
 .mq1,
@@ -122,284 +123,253 @@ section {
     color:#f71818;
   }
 
-//경복궁
-.palace-kb {
-  position: relative;
-  height: 700px;
-  margin-bottom: 150px;
-  padding-top: 30px;
-  background-color: #030101;
-  font-family: '양진체';
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  
-.container {
-  display: flex;
-  justify-content: center;
-  width: 1400px;
-  border: solid 10px rgb(23, 38, 204);
-  align-items: center;
-  top: 10%;
-  margin-left: 90px;
-  // overflow: hidden;
-  transform: skew(5deg);
-  
-  .card {
-    flex: 1;
-    transition: all 1s ease-in-out;
-    height: 70vmin;
-    border: solid 3px rgb(140, 240, 103);
+  //경복궁 
+  .palace-kb {
     position: relative;
-    .card__head {
-      color: rgb(245, 245, 4);
-      background: rgb(171, 132, 158);
-      opacity: 0.8;
-      padding: 0.5em;
-      transform: rotate(-90deg);
-      transform-origin: 0% 0%;
-      transition: all 0.5s ease-in-out;
-      min-width: 100%;
-      text-align: center;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      font-size: 1em;
-
-    }
-
-    &:hover { 
-      flex-grow: 10;
-      img {
-        filter: grayscale(0);
-      }
-      .card__head {
-        text-align: center;
-        top: calc(100% - 2em);
-        color: white;
-        background: rgba(0, 0, 0, 0.5);
-        font-size: 2em;
-        transform: rotate(0deg) skew(-5deg);
-      }
-    }
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+    height: 700px;
+    margin-bottom: 150px;
+    padding-top: 30px;
+    background-color: #030101;
+    font-family: '양진체';
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    margin-left: 100px;
+    
+  .container {
+    display: flex;
+    justify-content: center;
+    width: 1400px;
+    border: solid 10px rgb(23, 38, 204);
+    align-items: center;
+    top: 10%;
+    margin-left: 90px;
+    // overflow: hidden;
+    transform: skew(5deg);
+    
+    .card {
+      flex: 1;
       transition: all 1s ease-in-out;
-      filter: grayscale(100%);
-    }
-    &:not(:nth-child(5)) {
-      margin-right: 1em;
+      height: 70vmin;
+      border: solid 3px rgb(140, 240, 103);
+      position: relative;
+      .card__head {
+        color: rgb(245, 245, 4);
+        background: rgb(171, 132, 158);
+        opacity: 0.8;
+        padding: 0.5em;
+        transform: rotate(-90deg);
+        transform-origin: 0% 0%;
+        transition: all 0.5s ease-in-out;
+        min-width: 100%;
+        text-align: center;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        font-size: 1em;
+  
+      }
+  
+      &:hover { 
+        flex-grow: 10;
+        img {
+          filter: grayscale(0);
+        }
+        .card__head {
+          text-align: center;
+          top: calc(100% - 2em);
+          color: white;
+          background: rgba(0, 0, 0, 0.5);
+          font-size: 2em;
+          transform: rotate(0deg) skew(-5deg);
+        }
+      }
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: all 1s ease-in-out;
+        filter: grayscale(100%);
+      }
+      &:not(:nth-child(5)) {
+        margin-right: 1em;
+      }
     }
   }
-}
-}
+  }
 
 
-
-// 덕수궁
+//덕수궁 
 .palace-ds {
   position: relative;
   width: 1200px;
-  height: 100vh;
-  top: 0%;
-  margin-bottom: 200px;
-  left: 50px;
-
-
-.slider-container {
-  position: absolute;
-  overflow: hidden;
-  width: 100%;
-  height: 100vh;
-
-  .left-slide {
-    height: 100%;
-    width: 35%;
+  height: 700px;
+  .slider-container{
     position: absolute;
-    top: 0;
-    left: 0;
-    transition: transform 0.5s ease-in-out;
-
-  .item1, 
-  .item2,
-  .item3,
-  .item4 {
-    height: 100%;
+    overflow: hidden;
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-  }
-
-  .item1 {
-    background-color: #FD3555;
-  }
-  .item2 {
-    background-color: #2A86BA;
-
-  }
-  .item3 {
-    background-color: #252E33;
+    height: 100vh;
+     .left-slide{
+      height: 100%;
+      width: 35%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      transition: transform 0.7s ease-in-out;
+      div {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        color: #fff;
+        h1{
+          font-size: 40px;
+          margin-bottom: 10px;
+          margin-top: -30px;
+        }
+      }
+    }
+    .right-slide{
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 35%;
+      width: 65%;
+      transition: transform 0.7s ease-in-out;
+      div {
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+        height: 100%;
+        width: 100%;
+      }
+    }
   
- }
-  .item4 {
-    background-color: #FFB866;
-   
-  }
-      
-  h1 {
-    font-size: 40px;
-    font-family: '양진체';
-    margin-bottom: 10px;
-    margin-top: -30px;
-  }
-}
+    .action-buttons{
+      background-color: #fff;
+      border: none;
+      color: #aaa;
+      cursor: pointer;
+      font-size: 16px;
 
-
-.right-slide {
-  height: 100%;
-  position: absolute;
-  top: 0%;
-  left: 35%;
-  width: 100%;
-  transition: transform 0.5s ease-in-out;
-
-
-  .item1,
-  .item2,
-  .item3,
-  .item4 {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  height: 100%;
-  width: 100%;
-  }
-
-  .item1 {
-    background-image: url('../../video/palace/ds-junggwan.jpg');
-  }
-  .item2 {
-    background-image: url('../../video/palace/ds-kyungwoonham.jpg');
-  }
-  .item3 {
-    background-image: url('../../video/palace/ds-seokjo.jpg');
-  }
-  .item4 {
-    background-image: url('../../video/palace/ds-seokuh.jpg');
-  }
-
-}
-
-button {
-  background-color: #fff;
-  border: none;
-  color: #aaa;
-  cursor: pointer;
-  font-size: 16px;
-  padding: 15px;
 
   &:hover {
     color: #222;
   }
   
-  &:focus {
-    outline: none;
-  }
-}
-  .action-buttons {
-    position: absolute;
-    left: 33%;
-    top: 50%;
-    z-index: 100;
-
-    .down-button {
-      transform: translateX(-100%);
-      border-top-left-radius: 5px;
-      border-bottom-left-radius: 5px;
-    }
-    .up-button {
-      transform: translateY(-100%);
-      border-top-right-radius: 5px;
-      border-bottom-right-radius: 5px;
-    }
-  }
-}
-}
-
-
-// 창경궁
-.container {
-  position: absolute;
-  top: 80%;
-  width: 100%;
-  height: 70%;
-
-  .mySlides {
-    display: none;
-  }
-
-  .prev,
-  .next {
-  cursor: pointer;
-  position: absolute;
-  top: 40%;
-  width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  color: white;
-  font-weight: bold;
-  font-size: 20px;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  -webkit-user-select: none;
-  }
-
-  .next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-  }
-
-
-  .prev:hover,
-  .next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-  }
-
-  .caption-container {
-  text-align: center;
-  background-color: #222;
-  padding: 2px 16px;
-  color: white;
-  }
-
-  .row {
-    &:after {
-      content: "";
-      display: table;
-      clear: both;
-      }
-    }
-    .column {
-        float: left;
-        width: 16.66%;
-    }
-        .demo-cursor {
-          opacity: 0.6;
-        }
-        
-        .active,
-        .demo:hover {
-          opacity: 1;
-        }   
+  &:hover {
+    color: #222;
   }
   
+    }
+      .down-button,
+      .up-button {    
+        padding: 15px;
+        position: absolute;
+        left: 35%;
+        top: 50%;
+        z-index: 100;
+      }
+      &:hover{
+        color: #222;
+      }
+      &:focus{
+        outline: none;
+      }
 
+      .down-button{
+        transform: translateX(-100%);
+        border-top-left-radius: 5px;
+        border-bottom-left-radius: 5px;
+  
+      }
+     .up-button{
+        transform: translateY(-100%);
+        border-top-right-radius: 5px;
+        border-bottom-right-radius: 5px;
+  
+      }
+  } 
+}
 
+// 창경궁
+.palace-cdk {
+  .container {
+    position: relative;
+  
+    .mySlides {
+      display: none;
+  
+      .numbertext {
+        color: #f2f2f2;
+        font-size: 12px;
+        padding: 8px 12px;
+        position: absolute;
+        top: 0;
+      }
+      
+    }
+  
+    .prev,
+    .next {
+    cursor: pointer;
+    position: absolute;
+    top: 40%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+    }
+  
+    .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+    }
+  
+  
+    .prev:hover,
+    .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+    }
+  
+    /* Container for image text */
+    .caption-container {
+    text-align: center;
+    background-color: #222;
+    padding: 2px 16px;
+    color: white;
+    }
+  
+    .row {
+      &:after {
+        content: "";
+        display: table;
+        clear: both;
+        }
+      }
+      .column {
+          float: left;
+          width: 16.66%;
+      }
+          .demo-cursor {
+            opacity: 0.6;
+          }
+          
+          .active,
+          .demo-cursor:hover {
+            opacity: 1;
+          }
+        
+    }
+}
+  
 #commonUpButton {
   position: fixed;
   right: 3vw;
