--- a/scss/event css/event.scss
+++ b/scss/event css/event.scss
@@ -13,11 +13,9 @@ header {
   width: 100%;
   height: 100%;
   display: flex;
-  align-items: center;
   font: bold 3rem/1 "Tilt Prism";
 
   .inner {
-    display: flex;
     padding: 0 7.5vw;
     z-index: 2;
 
@@ -34,6 +32,7 @@ header {
         display: flex;
         li {
           margin: 0 20px;
+          font-size: 0.7em;
         }
       }
     }
@@ -53,9 +52,10 @@ header {
   width: 2.5rem;
   height: 2.5rem;
   border-radius: 50%;
-  border: 1px solid white;
+  border: 2px solid white;
   background-color: rgb(8, 53, 53);
   color: white;
+  z-index: 999;
   cursor: pointer;
   &:hover {
     & {
@@ -70,7 +70,7 @@ header {
 // --------------- SECTION VIDEO ---------------------
 .video {
   position: absolute;
-  top: -140px;
+  top: -132px;
   z-index: 1;
   video {
     display: block;
@@ -84,26 +84,34 @@ header {
 .section-1 {
   position: absolute;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   z-index: 3;
   transition: 0.8s;
   background-color: #0c0b0d;
-  position: absolute;
+  background-image: url("https://images.pexels.com/photos/998641/pexels-photo-998641.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
   top: 100%;
 
   .container {
-    margin: 20px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // .line {
+    // }
     .line-1,
     .line-2 {
       display: flex;
-      justify-content: center;
-      // position: absolute;
-      // top: 200px;
+      // align-items: center;
+
       .element {
-        background-color: skyblue;
-        width: 20vw;
-        height: 40vh;
-        margin: 20px 20px;
+        display: flex;
+        align-items: center;
+        // background-color: salmon;
+        width: 19vw;
+        height: 28vh;
+        margin: 25px 25px;
+        overflow: hidden;
+        transform: rotate(-3deg);
 
         .content {
           .title {
@@ -111,16 +119,85 @@ header {
             font-weight: bold;
           }
           .text {
-            margin-top: 30px;
+            font-size: 1.2em;
+            margin-top: 40px;
+            line-height: 2;
+            a:hover {
+              text-decoration: underline;
+            }
           }
         }
 
         img {
           width: 100%;
+          height: 100%;
+          object-fit: cover;
+          cursor: pointer;
+          // background-color: white;
+          border: 4px solid lightgray;
+          // border-style: groove;
+          box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
         }
       }
     }
+    .line-1 > .element:first-child {
+      display: flex;
+      justify-content: center;
+      align-items: end;
+      width: 20vw;
+      height: 30vh;
+      transform: rotate(0);
+      // background-color: skyblue;
+    }
+
+    .detailPopup {
+      display: flex;
+      justify-content: center;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      // width: 40vw;
+      height: 70vh;
+      transform: translate(-50%, -50%);
+      // background-color: salmon;
+      visibility: hidden;
+      opacity: 0;
+      transition: 1s;
+
+      img {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        border: 2px solid gray;
+      }
+      // 닫기 버튼
+      .fa-regular {
+        position: absolute;
+        font-weight: lighter;
+        bottom: 20px;
+        right: 20px;
+        cursor: pointer;
+        font-size: 2em;
+      }
+    }
   }
+
+  .bottom-text {
+    position: relative;
+    white-space: nowrap;
+    width: 80%;
+    font-size: 2em;
+    margin: 50px 100px 0;
+    // text-align: right;
+    // background-color: salmon;
+    // overflow: hidden;
+  }
+}
+
+.show {
+  visibility: visible;
+  // opacity: 1;
 }
 
 .section-2 {
@@ -130,8 +207,8 @@ header {
   z-index: 3;
   transition: 0.8s;
   background-color: green;
-  position: absolute;
   top: 200%;
+  // top: 0;
 }
 
 .section-3 {
@@ -141,7 +218,6 @@ header {
   z-index: 3;
   transition: 0.8s;
   background-color: skyblue;
-  position: absolute;
   top: 300%;
 }
 
@@ -152,6 +228,5 @@ header {
   z-index: 3;
   transition: 0.8s;
   background-color: beige;
-  position: absolute;
   top: 400%;
 }
