--- a/scss/palace css/palace.scss
+++ b/scss/palace css/palace.scss
@@ -30,8 +30,10 @@
   font-style: normal;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+//font-family: 'Bangers', cursive;
 
-//HEADER
+ //HEADER
 
 header {
   width: 100%;
@@ -39,7 +41,7 @@ header {
   display: flex;
   padding: 0 7.5vw;
   align-items: center;
-  font: bold 3rem/1 "Tilt Prism";
+  font: bold 3rem/1 "Banger";
   a {
     &:hover {
       background: linear-gradient(to top, #fbf13a 10%, transparent 50%);
@@ -125,26 +127,31 @@ section {
 
   //경복궁 
   .palace-kb {
-    position: relative;
-    height: 700px;
-    margin-bottom: 150px;
-    padding-top: 30px;
-    background-color: #030101;
-    font-family: '양진체';
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    margin-left: 100px;
+    .inner {
+      position: relative;
+      height: 700px;
+      margin-bottom: 100px;
+      padding-top: 30px;
+      font-family: '양진체';
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+      margin-left: 100px;
+      background-image: url('../../video/palace/bg2.jpg');
+      background-size: contain;
+      background-size: height 700px;
+    }
     
   .container {
     display: flex;
     justify-content: center;
-    width: 1400px;
-    border: solid 10px rgb(23, 38, 204);
+    width: 1200px;
+    border: solid 5px rgb(144, 152, 236);
     align-items: center;
-    top: 10%;
-    margin-left: 90px;
-    // overflow: hidden;
+    top: 20%;
+    margin-left: 80px;
+    margin-top: 50px;
+    overflow: hidden;
     transform: skew(5deg);
     
     .card {
@@ -201,14 +208,28 @@ section {
 
 //덕수궁 
 .palace-ds {
-  position: relative;
-  width: 1200px;
-  height: 700px;
+  .inner {
+    position: absolute;
+    width: 1300px;
+    height: 700px;
+    left: 100px;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    background-image: url('../../video/palace/bg2.jpg');
+  }
+ 
+
   .slider-container{
     position: absolute;
     overflow: hidden;
-    width: 100%;
+    width: 1100px; 
     height: 100vh;
+    margin-top: 40px;
+    left: 10px;
+    border: dashed 5px #f4aeef;
+    
+    
      .left-slide{
       height: 100%;
       width: 35%;
@@ -216,6 +237,7 @@ section {
       top: 0;
       left: 0;
       transition: transform 0.7s ease-in-out;
+      
       div {
         height: 100%;
         width: 100%;
@@ -237,6 +259,7 @@ section {
       top: 0;
       left: 35%;
       width: 65%;
+      
       transition: transform 0.7s ease-in-out;
       div {
         background-repeat: no-repeat;
@@ -296,19 +319,40 @@ section {
 
 // 창경궁
 .palace-cdk {
+  
+  .inner {
+    position: relative;
+    width: 1300px;
+    height: 730px;
+    margin-top: 10px;
+    margin-left: 100px;
+    background-image: url('../../video/palace/bg2.jpg');
+    overflow: hidden;
+
+  }
+
+
   .container {
     position: relative;
-  
+    width: 1100px;
+    height: 670px;
+    margin-top: 20px;
+    left: 200px;
+    border: dashed 5px #e4e081;
+    overflow: hidden;
     .mySlides {
       display: none;
+      padding-bottom: 6px;
+      
+
   
-      .numbertext {
-        color: #f2f2f2;
-        font-size: 12px;
-        padding: 8px 12px;
-        position: absolute;
-        top: 0;
-      }
+      // .numbertext {
+      //   color: #f2f2f2;
+      //   font-size: 12px;
+      //   padding: 8px 12px;
+      //   position: absolute;
+      //   top: 0;
+      // }
       
     }
   
@@ -342,9 +386,11 @@ section {
     /* Container for image text */
     .caption-container {
     text-align: center;
-    background-color: #222;
-    padding: 2px 16px;
+    background-color: #b76bb2;
+    padding: 4px 16px;
+    font-family: '양진체';
     color: white;
+
     }
   
     .row {
@@ -359,7 +405,7 @@ section {
           width: 16.66%;
       }
           .demo-cursor {
-            opacity: 0.6;
+            opacity: 0.4;
           }
           
           .active,
