feat. event페이지 기능 수정 및 추가

--- a/scss/event css/_reset3.scss
+++ b/scss/event css/_reset3.scss
@@ -6,11 +6,9 @@
 
 //MAIN
 body {
-  // background-color: #0c0b0d;
-  color: #fff;
+  background-color: #0c0b0d;
   position: relative;
   height: 100vh;
-  // overflow: hidden;
 }
 ul,
 ol {
@@ -19,5 +17,4 @@ ol {
 
 a {
   text-decoration: none;
-  color: #fff;
 }
