--- a/scss/view css/view.scss
+++ b/scss/view css/view.scss
@@ -440,6 +440,7 @@ section {
       background-image: url(/video/spot-image/석촌호수\ 야경.jpeg);
       box-shadow: 0 5px 10px 0 black;
       overflow: hidden;
+      cursor: pointer;
       .imgPlace {
         width: 100%;
         height: 100%;
