--- a/scss/event css/event.css
+++ b/scss/event css/event.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Gajraj+One&family=Tilt+Prism&family=Tourney:wght@200&display=swap");
 * {
   margin: 0;
@@ -6,7 +7,7 @@
 }
 
 body {
-  color: #fff;
+  background-color: #0c0b0d;
   position: relative;
   height: 100vh;
 }
@@ -18,38 +19,59 @@ ol {
 
 a {
   text-decoration: none;
-  color: #fff;
+}
+
+body {
+  overflow-y: hidden;
 }
 
 header {
+  position: absolute;
   width: 100%;
-  height: 100%;
+  height: 20vh;
   display: flex;
-  align-items: center;
-  font: bold 3rem/1 "Tilt Prism";
-}
-header .inner {
-  display: flex;
+  justify-content: space-between;
   padding: 0 7.5vw;
-  z-index: 2;
+  align-items: center;
 }
-header .inner .logo {
-  position: absolute;
-  top: 6vh;
-}
-header .inner .menu {
-  position: absolute;
-  top: 6vh;
-  right: 10vw;
-}
-header .inner .menu .menu__sub-menu {
+header ul {
   display: flex;
 }
-header .inner .menu .menu__sub-menu li {
-  margin: 0 20px;
+header ul li {
+  margin: 1vw;
+  font-size: 2rem;
+}
+header a {
+  transition: color 0.2s, background-color 0.2s ease-in;
+  position: relative;
+  line-height: 2rem;
+  letter-spacing: 1px;
+  color: #fff;
+  font: bold 2.5rem/1 "Bangers";
+  text-shadow: -2px 0 #400bee, 0 2px #400bee, 2px 0 #400bee, 0 -2px #400bee;
+}
+header a::before {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 3px;
+  left: 0;
+  height: 3px;
+  width: 100%;
+  background-color: rgb(255, 255, 0);
+  transform-origin: right top;
+  transform: scale(0, 1);
+  transition: color 0.2s, transform 0.25s ease-out;
+}
+header a:hover::before, header a:focus::before {
+  transform-origin: left top;
+  transform: scale(1, 1);
 }
 header a:hover {
   background: linear-gradient(to top, #fbf13a 10%, transparent 50%);
+}
+header #headerLogo {
+  font-size: 5.5rem;
 }
 
 #commonUpButton {
@@ -59,9 +81,10 @@ header a:hover {
   width: 2.5rem;
   height: 2.5rem;
   border-radius: 50%;
-  border: 1px solid white;
-  background-color: rgb(8, 53, 53);
+  border: 2px solid white;
+  background-color: #083535;
   color: white;
+  z-index: 999;
   cursor: pointer;
 }
 #commonUpButton:hover {
@@ -73,11 +96,10 @@ header a:hover {
 
 .video {
   position: absolute;
-  top: -140px;
-  z-index: 1;
+  top: -132px;
+  z-index: -1;
 }
 .video video {
-  display: block;
   background-size: cover;
   width: 100%;
 }
@@ -85,40 +107,116 @@ header a:hover {
 .section-1 {
   position: absolute;
   width: 100%;
-  height: 100vh;
-  z-index: 3;
-  transition: 0.8s;
+  height: 100%;
+  z-index: 1;
+  transition: 1s;
   background-color: #0c0b0d;
-  position: absolute;
+  background-image: url("https://images.pexels.com/photos/998641/pexels-photo-998641.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
   top: 100%;
 }
 .section-1 .container {
-  margin: 20px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .section-1 .container .line-1,
 .section-1 .container .line-2 {
   display: flex;
-  justify-content: center;
 }
-.section-1 .container .line-1 .element,
-.section-1 .container .line-2 .element {
-  background-color: skyblue;
-  width: 20vw;
-  height: 40vh;
-  margin: 20px 20px;
+.section-1 .container .line-1 #textElement,
+.section-1 .container .line-2 #textElement {
+  width: 22vw;
+  height: 28vh;
+  color: #fff;
+  text-shadow: -2px 0 #400bee, 0 2px #400bee, 2px 0 #400bee, 0 -2px #400bee;
+  transform: rotate(0);
+  font-family: "Bangers";
 }
-.section-1 .container .line-1 .element .content .title,
-.section-1 .container .line-2 .element .content .title {
+.section-1 .container .line-1 #textElement .content .title,
+.section-1 .container .line-2 #textElement .content .title {
+  letter-spacing: 5px;
+  color: #fff;
   font-size: 2em;
   font-weight: bold;
 }
-.section-1 .container .line-1 .element .content .text,
-.section-1 .container .line-2 .element .content .text {
-  margin-top: 30px;
+.section-1 .container .line-1 #textElement .content .text,
+.section-1 .container .line-2 #textElement .content .text {
+  font-size: 1.5em;
+  margin-top: 40px;
+  letter-spacing: 2px;
+}
+.section-1 .container .line-1 #textElement .content .text a:hover,
+.section-1 .container .line-2 #textElement .content .text a:hover {
+  color: white;
+  text-decoration: underline;
+}
+.section-1 .container .line-1 .element,
+.section-1 .container .line-2 .element {
+  display: flex;
+  align-items: center;
+  width: 19vw;
+  height: 28vh;
+  margin: 25px 25px;
+  overflow: hidden;
+  transform: rotate(-3deg);
+}
+.section-1 .container .line-1 .element:hover,
+.section-1 .container .line-2 .element:hover {
+  transform: scale(1.05) rotate(-3deg);
 }
 .section-1 .container .line-1 .element img,
 .section-1 .container .line-2 .element img {
   width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  cursor: pointer;
+  border: 4px solid lightgray;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
+}
+.section-1 .container .detailPopup {
+  display: none;
+  justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: -moz-max-content;
+  width: max-content;
+  height: 70vh;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: 1s;
+}
+.section-1 .container .detailPopup img {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: center;
+     object-position: center;
+  border: 2px solid gray;
+}
+.section-1 .container .detailPopup .closeBtn {
+  position: absolute;
+  color: #fff;
+  font-weight: lighter;
+  bottom: 20px;
+  right: 20px;
+  cursor: pointer;
+  font-size: 2em;
+}
+.section-1 .bottom-text {
+  position: relative;
+  white-space: nowrap;
+  width: 80%;
+  font-size: 2em;
+  margin: 50px 100px 0;
+}
+
+.show {
+  visibility: visible;
 }
 
 .section-2 {
@@ -128,7 +226,6 @@ header a:hover {
   z-index: 3;
   transition: 0.8s;
   background-color: green;
-  position: absolute;
   top: 200%;
 }
 
@@ -139,7 +236,6 @@ header a:hover {
   z-index: 3;
   transition: 0.8s;
   background-color: skyblue;
-  position: absolute;
   top: 300%;
 }
 
@@ -150,6 +246,5 @@ header a:hover {
   z-index: 3;
   transition: 0.8s;
   background-color: beige;
-  position: absolute;
   top: 400%;
 }/*# sourceMappingURL=event.css.map */
