--- a/scss/event css/event.scss
+++ b/scss/event css/event.scss
@@ -2,45 +2,68 @@
 @import "reset3";
 
 //FONT
+@import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
+// "Bangers"
+
 @import url("https://fonts.googleapis.com/css2?family=Gajraj+One&family=Tilt+Prism&family=Tourney:wght@200&display=swap");
 // font-family: 'Gajraj One', cursive;
 // font-family: 'Tilt Prism', cursive;
 // font-family: 'Tourney', cursive;
 
 //--------------- HEADER ---------------------
+body {
+  overflow-y: hidden;
+}
 
 header {
+  position: absolute;
+  // background-color: black;
   width: 100%;
-  height: 100%;
+  height: 20vh;
   display: flex;
-  font: bold 3rem/1 "Tilt Prism";
-
-  .inner {
-    padding: 0 7.5vw;
-    z-index: 2;
-
-    .logo {
-      position: absolute;
-      top: 6vh;
-    }
-
-    .menu {
-      position: absolute;
-      top: 6vh;
-      right: 10vw;
-      .menu__sub-menu {
-        display: flex;
-        li {
-          margin: 0 20px;
-          font-size: 0.7em;
-        }
-      }
+  justify-content: space-between;
+  padding: 0 7.5vw;
+  align-items: center;
+  ul {
+    display: flex;
+    li {
+      margin: 1vw;
+      font-size: 2rem;
     }
   }
   a {
+    transition: color 0.2s, background-color 0.2s ease-in;
+    position: relative;
+    line-height: 2rem;
+    letter-spacing: 1px;
+    color: #fff;
+    font: bold 2.5rem/1 "Bangers";
+    text-shadow: -2px 0 #400bee, 0 2px #400bee, 2px 0 #400bee, 0 -2px #400bee;
+    &::before {
+      content: "";
+      display: block;
+      position: absolute;
+      bottom: 3px;
+      left: 0;
+      height: 3px;
+      width: 100%;
+      background-color: rgb(255, 255, 0);
+      transform-origin: right top;
+      transform: scale(0, 1);
+      transition: color 0.2s, transform 0.25s ease-out;
+    }
+    &:hover::before,
+    &:focus::before {
+      transform-origin: left top;
+      transform: scale(1, 1);
+    }
     &:hover {
       background: linear-gradient(to top, #fbf13a 10%, transparent 50%);
     }
+  }
+
+  #headerLogo {
+    font-size: 5.5rem;
   }
 }
 
@@ -53,7 +76,7 @@ header {
   height: 2.5rem;
   border-radius: 50%;
   border: 2px solid white;
-  background-color: rgb(8, 53, 53);
+  background-color: #083535;
   color: white;
   z-index: 999;
   cursor: pointer;
@@ -71,9 +94,9 @@ header {
 .video {
   position: absolute;
   top: -132px;
-  z-index: 1;
+  z-index: -1;
   video {
-    display: block;
+    // display: block;
     background-size: cover;
     width: 100%;
   }
@@ -85,12 +108,11 @@ header {
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 3;
-  transition: 0.8s;
+  z-index: 1;
+  transition: 1s;
   background-color: #0c0b0d;
   background-image: url("https://images.pexels.com/photos/998641/pexels-photo-998641.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
   top: 100%;
-
   .container {
     height: 100%;
     display: flex;
@@ -101,31 +123,43 @@ header {
     .line-1,
     .line-2 {
       display: flex;
-      // align-items: center;
+      #textElement {
+        width: 22vw;
+        height: 28vh;
+        color: #fff;
+        text-shadow: -2px 0 #400bee, 0 2px #400bee, 2px 0 #400bee,
+          0 -2px #400bee;
+        transform: rotate(0);
+        font-family: "Bangers";
+        .content {
+          .title {
+            letter-spacing: 5px;
+            color: #fff;
+            font-size: 2em;
+            font-weight: bold;
+          }
+          .text {
+            font-size: 1.5em;
+            margin-top: 40px;
+            letter-spacing: 2px;
+            a:hover {
+              color: white;
+              text-decoration: underline;
+            }
+          }
+        }
+      }
 
       .element {
         display: flex;
         align-items: center;
-        // background-color: salmon;
         width: 19vw;
         height: 28vh;
         margin: 25px 25px;
         overflow: hidden;
         transform: rotate(-3deg);
-
-        .content {
-          .title {
-            font-size: 2em;
-            font-weight: bold;
-          }
-          .text {
-            font-size: 1.2em;
-            margin-top: 40px;
-            line-height: 2;
-            a:hover {
-              text-decoration: underline;
-            }
-          }
+        &:hover {
+          transform: scale(1.05) rotate(-3deg);
         }
 
         img {
@@ -133,34 +167,22 @@ header {
           height: 100%;
           object-fit: cover;
           cursor: pointer;
-          // background-color: white;
           border: 4px solid lightgray;
-          // border-style: groove;
           box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
         }
       }
     }
-    .line-1 > .element:first-child {
-      display: flex;
-      justify-content: center;
-      align-items: end;
-      width: 20vw;
-      height: 30vh;
-      transform: rotate(0);
-      // background-color: skyblue;
-    }
 
     .detailPopup {
-      display: flex;
+      display: none;
       justify-content: center;
       position: absolute;
       top: 50%;
       left: 50%;
-      // width: 40vw;
+      width: max-content;
       height: 70vh;
       transform: translate(-50%, -50%);
-      // background-color: salmon;
-      visibility: hidden;
+      // visibility: hidden;
       opacity: 0;
       transition: 1s;
 
@@ -169,11 +191,13 @@ header {
         width: 100%;
         height: 100%;
         object-fit: contain;
+        object-position: center;
         border: 2px solid gray;
       }
       // 닫기 버튼
-      .fa-regular {
+      .closeBtn {
         position: absolute;
+        color: #fff;
         font-weight: lighter;
         bottom: 20px;
         right: 20px;
@@ -189,9 +213,6 @@ header {
     width: 80%;
     font-size: 2em;
     margin: 50px 100px 0;
-    // text-align: right;
-    // background-color: salmon;
-    // overflow: hidden;
   }
 }
 
