--- a/scss/palace css/palace.css
+++ b/scss/palace css/palace.css
@@ -97,12 +97,6 @@ figure .text:hover p {
   -webkit-text-stroke: 2px rgb(234, 181, 232);
 }
 
-section {
-  width: 100%;
-  height: 1000px;
-  overflow: hidden;
-}
-
 .mq1,
 .mq2 {
   width: 100%;
@@ -121,19 +115,20 @@ section {
   color: #f71818;
 }
 
+.palace-kb {
+  background-image: url("../../video/palace/bg-4.jpg");
+  background-position: contain;
+}
 .palace-kb .inner {
   position: relative;
-  height: 700px;
+  height: 600px;
   margin-bottom: 100px;
-  padding-top: 30px;
+  margin-top: 30px;
   font-family: "양진체";
   justify-content: center;
   align-items: center;
   overflow: hidden;
   margin-left: 100px;
-  background-image: url("../../video/palace/bg2.jpg");
-  background-size: contain;
-  background-size: height 700px;
 }
 .palace-kb .container {
   display: flex;
@@ -142,8 +137,8 @@ section {
   border: solid 5px rgb(144, 152, 236);
   align-items: center;
   top: 20%;
-  margin-left: 80px;
-  margin-top: 50px;
+  margin-left: 85px;
+  margin-top: 30px;
   overflow: hidden;
   transform: skew(5deg);
 }
@@ -195,15 +190,19 @@ section {
   margin-right: 1em;
 }
 
+.palace-ds {
+  height: 600px;
+  background-image: url("../../video/palace/bg2.jpg");
+  background-position: contain;
+}
 .palace-ds .inner {
-  position: absolute;
+  position: relative;
   width: 1300px;
-  height: 700px;
-  left: 100px;
+  height: 600px;
+  left: 80px;
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  background-image: url("../../video/palace/bg2.jpg");
 }
 .palace-ds .slider-container {
   position: absolute;
@@ -212,7 +211,7 @@ section {
   height: 100vh;
   margin-top: 40px;
   left: 10px;
-  border: dashed 5px #f4aeef;
+  border: solid 5px #84ff9b;
 }
 .palace-ds .slider-container .left-slide {
   height: 100%;
@@ -235,6 +234,8 @@ section {
   font-size: 40px;
   margin-bottom: 10px;
   margin-top: -30px;
+  color: rgb(100, 255, 118);
+  text-shadow: -2px 0 #400bee, 0 2px #400bee, 2px 0 #400bee, 0 -2px #400bee;
 }
 .palace-ds .slider-container .right-slide {
   height: 100%;
@@ -289,31 +290,35 @@ section {
   border-bottom-right-radius: 5px;
 }
 
+.palace-cdk {
+  background-image: url("../../video/palace/bg5.jpg");
+  background-position: contain;
+  height: 700px;
+}
 .palace-cdk .inner {
   position: relative;
-  width: 1300px;
-  height: 730px;
-  margin-top: 10px;
+  height: 680px;
+  margin-top: 100px;
   margin-left: 100px;
-  background-image: url("../../video/palace/bg2.jpg");
   overflow: hidden;
 }
-.palace-cdk .container {
+.palace-cdk .inner .container {
   position: relative;
-  width: 1100px;
-  height: 670px;
+  width: 1000px;
+  height: 700px;
   margin-top: 20px;
   left: 200px;
   border: dashed 5px #e4e081;
   overflow: hidden;
   /* Container for image text */
 }
-.palace-cdk .container .mySlides {
+.palace-cdk .inner .container .mySlides {
   display: none;
   padding-bottom: 6px;
+  height: 100% px;
 }
-.palace-cdk .container .prev,
-.palace-cdk .container .next {
+.palace-cdk .inner .container .prev,
+.palace-cdk .inner .container .next {
   cursor: pointer;
   position: absolute;
   top: 40%;
@@ -328,35 +333,40 @@ section {
        user-select: none;
   -webkit-user-select: none;
 }
-.palace-cdk .container .next {
+.palace-cdk .inner .container .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
-.palace-cdk .container .prev:hover,
-.palace-cdk .container .next:hover {
+.palace-cdk .inner .container .prev:hover,
+.palace-cdk .inner .container .next:hover {
   background-color: rgba(0, 0, 0, 0.8);
 }
-.palace-cdk .container .caption-container {
+.palace-cdk .inner .container .caption-container {
+  position: relative;
   text-align: center;
   background-color: #b76bb2;
   padding: 4px 16px;
   font-family: "양진체";
   color: white;
 }
-.palace-cdk .container .row:after {
+.palace-cdk .inner .container .row {
+  position: relative;
+  height: 100px;
+}
+.palace-cdk .inner .container .row:after {
   content: "";
   display: table;
   clear: both;
 }
-.palace-cdk .container .column {
+.palace-cdk .inner .container .column {
   float: left;
   width: 16.66%;
 }
-.palace-cdk .container .demo-cursor {
+.palace-cdk .inner .container .demo-cursor {
   opacity: 0.4;
 }
-.palace-cdk .container .active,
-.palace-cdk .container .demo-cursor:hover {
+.palace-cdk .inner .container .active,
+.palace-cdk .inner .container .demo-cursor:hover {
   opacity: 1;
 }
 
